infrastructure/configs/gateway-api/routes/auth-pocket-id.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pocket-id
  namespace: auth
  annotations:
    glance/icon: di:pocket-id
    glance/name: "Pocket ID"
    glance/url: https://id.wst.sh
spec:
  hostnames:
    - id.wst.sh
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - kind: Service
          name: pocket-id
          port: 1411
          weight: 1
