infrastructure/configs/gateway-api/routes/databases-drizzle-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: drizzle-gateway
  namespace: databases
spec:
  hostnames:
    - db.wst.sh
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - kind: Service
          name: drizzle-gateway
          port: 4983
          weight: 1
