infrastructure/configs/gateway-api/routes/databases-postgresus.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: postgresus
  namespace: databases
spec:
  hostnames:
    - dbb.wst.sh
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - kind: Service
          name: postgresus-service
          port: 4005
          weight: 1
