infrastructure/configs/gateway-api/routes/default-pve.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pve
  namespace: default
spec:
  hostnames:
    - pve.wst.sh
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - kind: Service
          name: pve
          port: 8006
          weight: 1
