infrastructure/configs/gateway-api/routes/homelab-adg.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: adg
  namespace: homelab
spec:
  hostnames:
    - adg.wst.sh
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - kind: Service
          name: homelab
          port: 3000
          weight: 1
