infrastructure/configs/gateway-api/routes/homelab-glance.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: glance
  namespace: homelab
  annotations:
    glance/icon: di:glance
    glance/name: "Glance"
    glance/url: https://glance.wst.sh
spec:
  hostnames:
    - glance.wst.sh
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - kind: Service
          name: glance
          port: 8080
          weight: 1
