infrastructure/configs/gateway-api/routes/homelab-homeassistant.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homeassistant
  namespace: homelab
spec:
  hostnames:
    - ha.wst.sh
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - kind: Service
          name: homeassistant
          port: 8123
          weight: 1
