infrastructure/configs/gateway-api/routes/homelab-n8n.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: n8n
  namespace: homelab
  annotations:
    glance/icon: di:n8n
    glance/name: "n8n"
    glance/url: "https://n8n.wst.sh"
spec:
  hostnames:
    - n8n.wst.sh
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - kind: Service
          name: n8n
          port: 5678
          weight: 1
