infrastructure/configs/gateway-api/routes/homelab-openclaw.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: openclaw
  namespace: homelab
  annotations:
    glance/icon: carbon:ibm-watson-assistant
    glance/name: "openclaw"
    glance/url: https://claw.wst.sh
spec:
  hostnames:
    - claw.wst.sh
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - kind: Service
          name: openclaw
          port: 18789
          weight: 1
