infrastructure/configs/gateway-api/routes/homelab-portfolio-ibkr.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: portfolio-ibkr
  namespace: homelab
spec:
  hostnames:
    - portfolio.wst.sh
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - kind: Service
          name: portfolio-ibkr
          port: 3000
          weight: 1
