infrastructure/configs/gateway-api/routes/homelab-qui.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qui
  namespace: homelab
spec:
  hostnames:
    - qb.wst.sh
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - kind: Service
          name: qui
          port: 7476
          weight: 1
