infrastructure/configs/gateway-api/routes/homelab-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route
  namespace: homelab
spec:
  hostnames:
    - route.wst.sh
  rules:
    # Clash Dashboard - needs path rewriting /ui(/|$)(.*) -> /$2
    # Match /ui followed by anything -> strip /ui prefix
    - matches:
        - path:
            type: PathPrefix
            value: /ui
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - kind: Service
          name: clash-api
          port: 9090
          weight: 1
    # OpenWRT main interface - must be last (lowest priority)
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - kind: Service
          name: homelab
          port: 80
          weight: 1
