infrastructure/configs/gateway-api/routes/homelab-synology-media-proxy.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: synology-media-proxy-mp
  namespace: homelab
spec:
  hostnames:
    - mp.wst.sh
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - kind: Service
          name: moviepilot-external
          port: 13000
          weight: 1
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: synology-media-proxy-emby
  namespace: homelab
spec:
  hostnames:
    - emby.wst.sh
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - kind: Service
          name: emby-external
          port: 28096
          weight: 1
