infrastructure/configs/gateway-api/routes/homelab-vaultwarden.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vaultwarden
  namespace: homelab
  annotations:
    glance/icon: di:vaultwarden
    glance/name: "Vaultwarden"
    glance/url: "https://pwd.wst.sh"
spec:
  hostnames:
    - pwd.wst.sh
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - kind: Service
          name: vaultwarden
          port: 80
          weight: 1
