infrastructure/configs/gateway-api/routes/homelab-wol.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wol
  namespace: homelab
spec:
  hostnames:
    - wol.wst.sh
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - kind: Service
          name: homelab-host
          port: 8090
          weight: 1
