infrastructure/configs/gateway-api/routes/observability-beszel-hub.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: beszel-hub
  namespace: observability
  annotations:
    glance/icon: di:beszel
    glance/name: "Beszel Hub"
    glance/url: https://monitor.wst.sh
spec:
  hostnames:
    - monitor.wst.sh
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - kind: Service
          name: beszel-hub
          port: 8090
          weight: 1
