infrastructure/configs/gateway-api/routes/observability-kite.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kite
  namespace: observability
spec:
  hostnames:
    - kite.wst.sh
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - kind: Service
          name: kite
          port: 8080
          weight: 1
