infrastructure/configs/gateway-api/routes/observability-openstatus-dashboard.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: openstatus-dashboard
  namespace: observability
  annotations:
    glance/icon: di:openstatus
    glance/name: "OpenStatus"
    glance/url: https://status.wst.sh
spec:
  hostnames:
    - status.wst.sh
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - kind: Service
          name: openstatus-dashboard
          port: 3000
          weight: 1
