infrastructure/configs/gateway-api/routes/observability-portainer.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: portainer
  namespace: observability
  annotations:
    glance/icon: di:portainer
    glance/name: "Portainer"
    glance/url: "https://portainer.wst.sh"
spec:
  hostnames:
    - portainer.wst.sh
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - kind: Service
          name: portainer
          port: 9000
          weight: 1
