infrastructure/configs/gateway-api/routes/observability-uptime-kuma.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: uptime-kuma
  namespace: observability
  annotations:
    glance/icon: di:uptime-kuma
    glance/name: "Uptime Kuma"
    glance/url: https://status.realtong.cn
spec:
  hostnames:
    - uptime.wst.sh
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - kind: Service
          name: uptime-kuma
          port: 3001
          weight: 1
